Moved extensive in-file implementations for computation and plotting to external modular components in `src.modeling.physics_model`. Adjusted `.gitignore` for experimental data outputs. Removed obsolete code and streamlined script for improved maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+src/experimental_data/plots/*
+!src/experimental_data/plots/__init__.py
 licensed
 sandbox
 .benchmarks
 lib
 .idea
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
