--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 src/experimental_data/plots/*
 !src/experimental_data/plots/__init__.py
+src/experimental_data/data/*
+!src/experimental_data/data/__init__.py
 licensed
 sandbox
 .benchmarks
