--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 src/experimental_data/plots/*
 !src/experimental_data/plots/__init__.py
+!src/experimental_data/plots/SHA256SUMS.txt
 src/experimental_data/data/*
 !src/experimental_data/data/__init__.py
 licensed
@@ -184,4 +185,3 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
-
